# Automated-Metadata-Generation

./: .gitignore  .replit  README.md  app.py  deployment_guide.md  projectWorkflow.txt  project_requirements.txt  pyproject.toml  replit.md  requirements.txt
.streamlit/: config.toml
config/: config.yaml
src/: __init__.py  content_analyzer.py  document_processor.py  metadata_generator.py  utils.py
